style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Poppins', sans-serif;
}

body {
    height: 100vh;
    width: 100%;
    background: linear-gradient(to bottom, #68EACC 0%, #497BE8 100%);
}

.container {
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    background: none;
}

.wrapper {
    /* margin: auto; */
    max-width: 400px;
    width: 100%;
    background-color: #fff;
    border-radius: 5px;
    padding: 25px;
}

.wrapper header {
    font-size: 30px;
    font-weight: 600;
}

.wrapper .inputField {
    display: flex;
    height: 45px;
    width: 100%;
    margin: 20px 0;
}

.wrapper input {
    width: 85%;
    height: 100%;
    border: 1px solid #ccc;
    outline: none;
    font-size: 17px;
    border-radius: 3px;
    padding-left: 15px;
}

.inputField button {
    width: 60px;
    height: 100%;
    border: none;
    outline: none;
    background-color: #8E49E8;
    color: #fff;
    font-size: 22px;
    cursor: pointer;
    border-radius: 3px;
    margin-left: 5px;
    opacity: 0.6;
    pointer-events: none;
}

.inputField button.active {
    opacity: 1;
    pointer-events: auto;
}

.wrapper .todoList {
    max-height: 250px;
    overflow-y: auto;
}

.todoList li {
    overflow: hidden;
    list-style: none;
    height: 45px;
    line-height: 45px;
    position: relative;
    background-color: #f0f0f0;
    border-radius: 3px;
    border-bottom: 1px solid #ccc;
    margin-bottom: 8px;
    padding: 0 15px;
    cursor: default;
}

.todoList li span {
    position: absolute;
    right: -45px;
    color: #fff;
    width: 45px;
    text-align: center;
    background-color: #e74c3c;
    border-radius: 0 3px 3px 0;
    cursor: pointer;
    transition: all .2s ease;
}

.todoList li:hover span {
    right: 0;
}

.wrapper p.helpMobile {
    font-size: 0px;
    margin-top: 15px;
}

.wrapper .footer {
    display: flex;
    width: 100%;
    margin-top: 25px;
    align-items: center;
    justify-content: space-between;
}

.footer button {
    height: 45px;
    width: 120px;
    border: none;
    outline: none;
    background-color: #8E49E8;
    color: #fff;
    font-size: 15px;
    cursor: pointer;
    border-radius: 3px;
    padding: 6px;
    opacity: 0.6;
    pointer-events: none;
}

.footer button.active {
    opacity: 1;
    pointer-events: auto;
}

@media (max-width: 1024px) {
    .wrapper p.helpMobile {
        font-size: 0;
        line-height: 1;
    }

    .wrapper p.helpMobile.active {
        font-size: 13px;
    }
}

@media (max-width: 384px) {
    .footer button {
        font-size: 13px;
        font-weight: bold;
    }
}

@media (max-width: 347px) {
    .footer span {
        font-size: 12px;
    }

    .inputField input {
        font-size: 13px;
    }

    .todoList {
        font-size: 13px;
    }

    .wrapper p.helpMobile {
        font-size: 0;
        line-height: 1;
    }

    .wrapper p.helpMobile.active {
        font-size: 10px;
    }
}

